--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
         </div>
         <!-- Artwork Item 2 -->
         <div class="artwork-item group relative overflow-hidden rounded-lg shadow-lg" data-category="2d">
-          <img src="C:\Users\raj95\Desktop\New folder\showcase.png"
+          <img src="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/showcase.png"
                class="w-full h-64 object-cover transform transition-transform duration-300 group-hover:scale-105">
           <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition-all duration-300 flex items-center justify-center">
             <button class="view-btn opacity-0 group-hover:opacity-100 text-white text-lg bg-blue-600 px-6 py-2 rounded-full transition-opacity duration-300">
