--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </div>
       <div class="w-full md:w-1/2 mt-8 md:mt-0 flex justify-center">
-        <img src="C:\Users\raj95\Desktop\New folder\dp.png" alt="profile pic" class="rounded-lg shadow-md" >
+        <img src="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/cv.png" class="rounded-lg shadow-md" >
       </div>
     </div>
   </section>
@@ -243,7 +243,7 @@
   
         <!-- Artwork Item 2 -->
         <div class="artwork-item group relative overflow-hidden rounded-lg shadow-lg" data-category="2d">
-          <img src="C:\Users\raj95\Desktop\New folder\cafe_05.png" alt="2D Artwork 2" 
+          <img src="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/cafe_05.png" alt="2D Artwork 2" 
                class="w-full h-64 object-cover transform transition-transform duration-300 group-hover:scale-105">
           <div class="absolute inset-0 bg-black bg-opacity-0 group-hover:bg-opacity-50 transition-all duration-300 flex items-center justify-center">
             <button class="view-btn opacity-0 group-hover:opacity-100 text-white text-lg bg-blue-600 px-6 py-2 rounded-full transition-opacity duration-300">
