--- a/index.html
+++ b/index.html
@@ -166,11 +166,11 @@
       
         <div class="flex justify-center md:justify-start space-x-4">
           <a href="#" class="bg-blue-600 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-700">Let&#39;s Talk</a>
-          <a href="C:\Users\raj95\Desktop\New folder\cv.png" alt="Ishu cover letter" class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg shadow hover:bg-gray-300">Download CV</a>
+          <a href="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/cv.png" alt="Ishu cover letter" class="bg-gray-200 text-gray-700 px-6 py-2 rounded-lg shadow hover:bg-gray-300">Download CV</a>
         </div>
       </div>
       <div class="w-full md:w-1/2 mt-8 md:mt-0 flex justify-center">
-        <img src="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/cv.png" class="rounded-lg shadow-md" >
+        <img src="https://raw.githubusercontent.com/ishuishuraj/portfolio-page/refs/heads/main/dp.png" class="rounded-lg shadow-md" >
       </div>
     </div>
   </section>
