--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <nav class="flex space-x-6">
         <a href="#" class="text-gray-600 hover:text-blue-600">Home</a>
         <a href="#" class="text-gray-600 hover:text-blue-600">More</a>
-        <a href="#" class="text-red-600 hover:text-blue-600">Contact</a>
+        <a href="Contact_me.html" class="text-red-600 hover:text-blue-600">Contact</a>
       </nav>
     </div>
   </header>
