--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   }
 </style>
 <!-- Logo with Illustrator Theme -->
-<a href="#" class="flex items-center space-x-2 group">
+<a href="mailto:your-email@example.com" class="flex items-center space-x-2 group">
   <svg class="w-25 h-25 transition-transform duration-200 hover:rotate-12" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
     <!-- Paintbrush Handle -->
     <path d="M24 4L28 16L24 28L20 16L24 4Z" fill="#3B82F6" class="group-hover:fill-blue-400 transition-colors"/>
