--- a/Contact_me.html
+++ b/Contact_me.html
@@ -2,7 +2,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact_me</title>
-    <link rel="stylesheet" type="text/css" href="css/Cstyle.css" />
+    <link rel="stylesheet" type="text/css" href="Cstyle.css" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
