--- a/Contact_me.html
+++ b/Contact_me.html
@@ -51,7 +51,7 @@
           style="height: 200px"
         ></textarea>
 
-        <p><a href="Naveen_s Portfolio.html">Submit</a></p>
+        <p><a href="index.html">Submit</a></p>
       </form>
     </div>
   </body>
